Fix duplicated spacing classes

--- a/scss/core/_utilities/_spacing.scss
+++ b/scss/core/_utilities/_spacing.scss
@@ -24,18 +24,22 @@ $directions: top, right, bottom, left;
         #{$box-model-part}: $space-unit;
     }
 
+    @each $direction in $directions {
+        // .top-margin, .right-margin, etc.
+        .#{$direction}-#{$box-model-part} {
+            #{$box-model-part}-#{$direction}: $space-unit;
+        }
+    }
+
     @each $size, $size-value in $spacing {
         // .small-margin, .large-margin, .small-padding, .large-padding
         .#{$size}-#{$box-model-part} {
             #{$box-model-part}: $size-value;
         }
+    }
 
+    @each $size, $size-value in $spacing {
         @each $direction in $directions {
-            // .top-margin, .right-margin, etc.
-            .#{$direction}-#{$box-model-part} {
-                #{$box-model-part}-#{$direction}: $space-unit;
-            }
-
             // .small-top-margin, .small-right-margin, etc.
             .#{$size}-#{$direction}-#{$box-model-part} {
                 #{$box-model-part}-#{$direction}: $size-value;
